--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ langchain_google_vertexai
 Pillow
 aiohttp
 langchain_google_community
---upgrade --quiet duckduckgo-search
+--quiet duckduckgo-search
 ipykernel
 torch==2.1.0
 torchvision==0.16.0
