--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 streamlit==1.24.1
 transformers==4.46.2
-beautifulsoup4
-langgraph
-langsmith
-langchain-groq
-langchain_google_vertexai
-Pillow
-aiohttp
-langchain_google_community
-duckduckgo-search
-ipykernel
+beautifulsoup4==4.12.3
+langgraph==0.2.50
+langsmith==0.1.143
+langchain-groq==0.2.1
+langchain_google_vertexai==2.0.7
+Pillow==9.5.0
+aiohttp==3.11.2
+langchain_google_community==2.0.2
+duckduckgo-search==6.3.5
+ipykernel==6.29.5
 torch==2.1.0
 torchvision==0.16.0
 torchaudio==2.1.0
